Fixed z-index issues

--- a/components/Layout/Layout.module.scss
+++ b/components/Layout/Layout.module.scss
@@ -24,6 +24,7 @@
 
 .sidebar {
   position: fixed;
+  z-index: 10;
   box-sizing: border-box;
   display: flex;
   flex-flow: column;
